--- a/public/styles.css
+++ b/public/styles.css
@@ -1,41 +1,3 @@
-#app {
-    display: flex;
-    height: 100%;
-    width: 100%;
-}
-
-#app {
-    margin: 0 0;
-    padding: 1rem;
-    text-align: center;
-}
-
-html {
-    box-sizing: border-box;
-}
-
-*,
-*:before,
-*:after {
-    box-sizing: inherit;
-}
-
-body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-        "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-        sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-
-html,
-body {
-    height: 100%;
-    margin: 0;
-    line-height: 1.5;
-    color: #121212;
-}
-
 textarea,
 input,
 button {
@@ -66,165 +28,23 @@ button:active {
     transform: translateY(1px);
 }
 
-.sr-only {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-    border-width: 0;
+form {
+    display: block;
+    box-sizing: border-box;
+    border-bottom:55em ;
 }
 
-#root {
-    display: flex;
-    height: 100%;
-    width: 100%;
-}
-
-#sidebar {
-    width: 22rem;
-    background-color: #f7f7f7;
-    border-right: solid 1px #e3e3e3;
-    display: flex;
-    flex-direction: column;
-}
-
-#sidebar>* {
-    padding-left: 2rem;
-    padding-right: 2rem;
-}
-
-#sidebar h1 {
-    font-size: 1rem;
-    font-weight: 500;
-    display: flex;
-    align-items: center;
-    margin: 0;
-    padding: 1rem 2rem;
-    border-top: 1px solid #e3e3e3;
-    order: 1;
-    line-height: 1;
-}
-
-#sidebar>div {
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    border-bottom: 1px solid #e3e3e3;
-}
-
-#sidebar>div form {
+.login {
     position: relative;
-}
-
-
-@keyframes spin {
-    from {
-        transform: rotate(0deg);
-    }
-
-    to {
-        transform: rotate(360deg);
-    }
-}
-
-#sidebar nav {
-    flex: 1;
-    overflow: auto;
-    padding-top: 1rem;
-}
-
-#sidebar nav a span {
-    float: right;
-    color: #eeb004;
-}
-
-#sidebar nav a.active span {
-    color: inherit;
-}
-
-i {
-    color: #818181;
-}
-
-#sidebar nav .active i {
-    color: inherit;
-}
-
-#sidebar ul {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
-
-#sidebar li {
-    margin: 0.25rem 0;
-}
-
-#sidebar nav a {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    overflow: hidden;
-
-    white-space: pre;
-    padding: 0.5rem;
-    border-radius: 8px;
-    color: inherit;
-    text-decoration: none;
-    gap: 1rem;
-}
-
-#sidebar nav a:hover {
-    background: #e3e3e3;
-}
-
-#sidebar nav a.active {
-    background: hsl(224, 98%, 58%);
-    color: white;
-}
-
-#sidebar nav a.pending {
-    color: hsl(224, 98%, 58%);
-}
-
-#detail {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    padding: 2rem 4rem;
-    width: 100%;
-}
-
-#detail.h1 {
-    position: absolute;
-}
-
-#detail.loading {
-    opacity: 0.25;
-    transition: opacity 200ms;
-    transition-delay: 200ms;
-}
-
-
-
-#error-page {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
+    display: flow-root;
+    padding: 1em;
+    align-items: baseline;
 }
 
 .footer {
     position: absolute;
     bottom: 0px;
-    /* left: 50%; */
+    left: 50%;
     height: 2.5rem;
 }
 
