--- a/public/styles.css
+++ b/public/styles.css
@@ -31,7 +31,13 @@ button:active {
 form {
     display: block;
     box-sizing: border-box;
-    border-bottom:55em ;
+    border-bottom: 55em;
+}
+
+.basecontainer {
+    position: relative;
+    display: flexbox;
+    padding: 2em;
 }
 
 .login {
